--- a/tetris.html
+++ b/tetris.html
@@ -1,2 +1,28 @@
-<canvas id="tela" width="200" height="400"></canvas>
-<script src="tetris.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Tetris</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<div id="game-area">
+		<div id="stats">
+			<h2>LEVEL 1</h2>
+		</div>
+
+		<div id="game-canvas">
+			<canvas id="tela" width="200" height="400"></canvas>
+		</div>
+
+		<div id="next">
+			<h2>NEXT</h2>
+		</div>
+	</div>
+
+	<img src="assets/sprites/tiles.png" id="img-tiles" style="display: none;" alt="">
+	<script src="tetris.js"></script>
+</body>
+</html>
