--- a/tetris.html
+++ b/tetris.html
@@ -14,7 +14,7 @@
 		</div>
 
 		<div id="game-canvas">
-			<canvas id="tela" width="200" height="400"></canvas>
+			<canvas id="tela" width="504" height="448"></canvas>
 		</div>
 
 		<div id="next">
@@ -23,6 +23,8 @@
 	</div>
 
 	<img src="assets/sprites/tiles.png" id="img-tiles" style="display: none;" alt="">
+	<img src="assets/sprites/playfield.png" id="img-playfield" style="display: none;" alt="">
+	<img src="assets/sprites/menu.png" id="img-menu" style="display: none;" alt="">
 	<script src="tetris.js"></script>
 </body>
 </html>
