music because its cool

--- a/tetris.html
+++ b/tetris.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<audio src="assets/music/menu.mp3" id="audio-title"></audio>
+	<audio src="assets/music/theme1.mp3" id="audio-theme"></audio>
 	<div id="game-area">
 		<div id="stats">
 			<h2>LEVEL 1</h2>
