--- a/tetris.html
+++ b/tetris.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
 	<title>Tetris</title>
 	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 	<audio src="assets/music/menu.mp3" id="audio-title"></audio>
 	<audio src="assets/music/theme1.mp3" id="audio-theme"></audio>
@@ -21,6 +23,17 @@
 
 		<div id="next">
 			<h2>NEXT</h2>
+			<table>
+				<tr>
+					<td><img class="pieces"></td>
+				</tr>
+				<tr>
+					<td><img class="pieces"></td>
+				</tr>
+				<tr>
+					<td><img class="pieces"></td>
+				</tr>
+			</table>
 		</div>
 	</div>
 
@@ -29,4 +42,5 @@
 	<img src="assets/sprites/menu.png" id="img-menu" style="display: none;" alt="">
 	<script src="tetris.js"></script>
 </body>
+
 </html>
