tempo por nivel

--- a/tetris.html
+++ b/tetris.html
@@ -13,15 +13,15 @@
 	<audio src="assets/music/menu.mp3" id="audio-title"></audio>
 	<audio src="assets/music/theme1.mp3" id="audio-theme"></audio>
 	<div id="game-area">
-		<div id="stats">
-			<h2>LEVEL 1</h2>
+		<div style="display: none;" id="stats">
+			<h2 id="h1-level">LEVEL 1</h2>
 		</div>
 
 		<div id="game-canvas">
 			<canvas id="tela" width="504" height="448"></canvas>
 		</div>
 
-		<div id="next">
+		<div style="display: none;" id="next">
 			<h2>NEXT</h2>
 			<table>
 				<tr>
