--- a/tetris.html
+++ b/tetris.html
@@ -15,6 +15,8 @@
 	<div id="game-area">
 		<div style="display: none;" id="stats">
 			<h2 id="h1-level">LEVEL 1</h2>
+			<h2 id="h1-pts">00000   PTS</h2>
+			<h2 id="h1-lines">00000 LINHAS</h2>
 		</div>
 
 		<div id="game-canvas">
