--- a/tetris.html
+++ b/tetris.html
@@ -12,6 +12,12 @@
 <body>
 	<audio src="assets/music/menu.mp3" id="audio-title"></audio>
 	<audio src="assets/music/theme1.mp3" id="audio-theme"></audio>
+	<audio src="assets/music/sfx/gameover.mp3" id="audio-gameover"></audio>
+	<audio src="assets/music/sfx/move.mp3" id="audio-move"></audio>
+	<audio src="assets/music/sfx/stick.mp3" id="audio-stick"></audio>
+	<audio src="assets/music/sfx/line.mp3" id="audio-line"></audio>
+	<audio src="assets/music/sfx/rotate.mp3" id="audio-rotate"></audio>
+	<audio src="assets/music/sfx/crash.mp3" id="audio-crash"></audio>
 	<div id="game-area">
 		<div style="display: none;" id="stats">
 			<h2 id="h1-level">LEVEL 1</h2>
