--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Projeto Tetris</h1>
-<p>Equipe: sei la</p>
+<p>Equipe: Felipe, Erich, Matheus Vasconselos</p>
 
 
 <a href="tetris.html"><button>start</button></a>
